--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "Cody Lundquist",
   "license": "MIT",
   "devDependencies": {
+    "audiocontext": "^0.1.0",
+    "clone": "^0.1.17",
     "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-browserify": "^2.1.3",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "q": "^1.0.1"
   }
 }
