--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "band",
-  "version": "0.3.1",
+  "name": "BandJS",
+  "version": "0.4.0",
   "description": "Band.js - Music Composer - An interface for the Web Audio API that supports rhythms, multiple instruments, repeating sections, and complex time signatures.",
-  "main": "src/band.js",
+  "main": "src/main.js",
   "repository": {
     "type": "git",
     "url": "ssh://git@github.com:meenie/band.js.git"
@@ -14,8 +14,6 @@
     "clone": "^0.1.17",
     "grunt": "~0.4.1",
     "grunt-browserify": "^2.1.3",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "q": "^1.0.1"
+    "grunt-contrib-uglify": "~0.2.2"
   }
 }
