--- a/package.json
+++ b/package.json
@@ -9,25 +9,12 @@
   },
   "author": "Cody Lundquist",
   "license": "MIT",
+  "scripts": {
+    "build": "browserify src/main.js -s BandJS -o dist/band.js",
+    "prepublish": "npm run build"
+  },
   "devDependencies": {
     "audiocontext": "0.1.0",
-    "browserify": "^4.2.1",
-    "grunt": "0.4.1",
-    "grunt-browserify": "2.1.3",
-    "grunt-bump": "0.0.14",
-    "grunt-checkbranch": "^0.3.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "0.2.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.8.3",
-    "grunt-prompt": "^1.1.0",
-    "karma": "^0.12.17",
-    "karma-browserify": "^0.2.1",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-config": "^0.12.0",
-    "semver": "^2.3.1",
-    "time-grunt": "^0.4.0"
+    "browserify": "^4.2.1"
   }
 }
